clean some code - not all tests work still